apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'

android {
    compileSdkVersion 30 // 更新为最新版本
    buildToolsVersion "30.0.3" // 更新为最新版本

    defaultConfig {
        applicationId "com.tencent.yolov8ncnn"
        minSdkVersion 24
        targetSdkVersion 30 // 添加 targetSdkVersion
        versionCode 1
        versionName "1.0"

        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["options": "--add-opens=java.base/java.io=ALL-UNNAMED"]
            }
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = '1.8'
    }

    externalNativeBuild {
        cmake {
            version "3.10.2"
            path file('src/main/jni/CMakeLists.txt')
        }
    }
    namespace 'com.tencent.yolov8ncnn'
    ndkVersion '21.3.6528147'
}

dependencies {
    implementation 'com.android.support:support-v4:24.0.0' // 考虑更新到 AndroidX
    implementation 'com.felipecsl:gifimageview:2.2.0'
    implementation files('libs\\glide-3.6.0.jar')// 其他依赖项

}